include_directories(
    ${PROJECT_BINARY_DIR}
    "SourceFiles"
    "../Dependencies"
)

set(EXECUTABLE_NAME "TIMLE")

# Add source to this project's executable.
add_executable(${EXECUTABLE_NAME}
    "SourceFiles/Bosses/golem_dark.hpp"
    "SourceFiles/Bosses/golem_dark.cpp"
    "SourceFiles/Bosses/shadow.hpp"
    "SourceFiles/Bosses/shadow.cpp"

    "SourceFiles/Effects/bloodsplat.hpp"
    "SourceFiles/Effects/bloodsplat.cpp"
    "SourceFiles/Effects/effect.hpp"
    "SourceFiles/Effects/effect.cpp"

    "SourceFiles/Enemies/dark_archer.hpp"
    "SourceFiles/Enemies/dark_archer.cpp"
    "SourceFiles/Enemies/dark_soldier.hpp"
    "SourceFiles/Enemies/dark_soldier.cpp"
    "SourceFiles/Enemies/dwarf.hpp"
    "SourceFiles/Enemies/dwarf.cpp"
    "SourceFiles/Enemies/enemy.hpp"
    "SourceFiles/Enemies/enemy.cpp"
    "SourceFiles/Enemies/ghost.hpp"
    "SourceFiles/Enemies/ghost.cpp"
    "SourceFiles/Enemies/goblin.hpp"
    "SourceFiles/Enemies/goblin.cpp"
    "SourceFiles/Enemies/golem.hpp"
    "SourceFiles/Enemies/golem.cpp"
    "SourceFiles/Enemies/minotaur_mage.hpp"
    "SourceFiles/Enemies/minotaur_mage.cpp"
    "SourceFiles/Enemies/tentacle.hpp"
    "SourceFiles/Enemies/tentacle.cpp"

    "SourceFiles/Interface/button.hpp"
    "SourceFiles/Interface/button.cpp"
    "SourceFiles/Interface/component.hpp"
    "SourceFiles/Interface/component.cpp"
    "SourceFiles/Interface/container.hpp"
    "SourceFiles/Interface/container.cpp"
    "SourceFiles/Interface/label.hpp"
    "SourceFiles/Interface/label.cpp"
    "SourceFiles/Interface/level.hpp"
    "SourceFiles/Interface/level.cpp"
    "SourceFiles/Interface/life_bar.hpp"
    "SourceFiles/Interface/life_bar.cpp"
    "SourceFiles/Interface/object.hpp"
    "SourceFiles/Interface/object.cpp"
    "SourceFiles/Interface/tile_layer.hpp"
    "SourceFiles/Interface/tile_layer.cpp"

    "SourceFiles/Mechanics/application.hpp"
    "SourceFiles/Mechanics/application.cpp"
    "SourceFiles/Mechanics/audio_manager.hpp"
    "SourceFiles/Mechanics/audio_manager.cpp"
    "SourceFiles/Mechanics/data_tables.hpp"
    "SourceFiles/Mechanics/data_tables.cpp"
    "SourceFiles/Mechanics/main.cpp"
    "SourceFiles/Mechanics/resource_holder.hpp"
    "SourceFiles/Mechanics/resource_holder.inl"
    "SourceFiles/Mechanics/resource_identifiers.hpp"
    "SourceFiles/Mechanics/world.hpp"
    "SourceFiles/Mechanics/world.cpp"
    "SourceFiles/Mechanics/world_context.hpp"
    "SourceFiles/Mechanics/world_context.cpp"

    "SourceFiles/Objects/dead_man.hpp"
    "SourceFiles/Objects/dead_man.cpp"
    "SourceFiles/Objects/dialog_person.hpp"
    "SourceFiles/Objects/dialog_person.cpp"
    "SourceFiles/Objects/entity.hpp"
    "SourceFiles/Objects/entity.cpp"
    "SourceFiles/Objects/gate.hpp"
    "SourceFiles/Objects/gate.cpp"
    "SourceFiles/Objects/moving_platform.hpp"
    "SourceFiles/Objects/moving_platform.cpp"
    "SourceFiles/Objects/rock.hpp"
    "SourceFiles/Objects/rock.cpp"

    "SourceFiles/Player/player.hpp"
    "SourceFiles/Player/player.cpp"
    "SourceFiles/Player/player_info.hpp"
    "SourceFiles/Player/player_info.cpp"

    "SourceFiles/Projectiles/bullet.hpp"
    "SourceFiles/Projectiles/bullet.cpp"
    "SourceFiles/Projectiles/flamestrike.hpp"
    "SourceFiles/Projectiles/flamestrike.cpp"
    "SourceFiles/Projectiles/magic_arrow.hpp"
    "SourceFiles/Projectiles/magic_arrow.cpp"
    "SourceFiles/Projectiles/projectile.hpp"
    "SourceFiles/Projectiles/projectile.cpp"

    "SourceFiles/States/changing_state.hpp"
    "SourceFiles/States/changing_state.cpp"
    "SourceFiles/States/choosing_state.hpp"
    "SourceFiles/States/choosing_state.cpp"
    "SourceFiles/States/dialog_state.hpp"
    "SourceFiles/States/dialog_state.cpp"
    "SourceFiles/States/game_over_state.hpp"
    "SourceFiles/States/game_over_state.cpp"
    "SourceFiles/States/game_state.hpp"
    "SourceFiles/States/game_state.cpp"
    "SourceFiles/States/loading_state.hpp"
    "SourceFiles/States/loading_state.cpp"
    "SourceFiles/States/menu_state.hpp"
    "SourceFiles/States/menu_state.cpp"
    "SourceFiles/States/parallel_task.hpp"
    "SourceFiles/States/parallel_task.cpp"
    "SourceFiles/States/pause_state.hpp"
    "SourceFiles/States/pause_state.cpp"
    "SourceFiles/States/settings_state.hpp"
    "SourceFiles/States/settings_state.cpp"
    "SourceFiles/States/state.hpp"
    "SourceFiles/States/state.cpp"
    "SourceFiles/States/state_identifiers.hpp"
    "SourceFiles/States/state_stack.hpp"
    "SourceFiles/States/state_stack.cpp"
    "SourceFiles/States/title_state.hpp"
    "SourceFiles/States/title_state.cpp"
    "SourceFiles/States/titre_state.hpp"
    "SourceFiles/States/titre_state.cpp"
    "SourceFiles/States/transition_state.hpp"
    "SourceFiles/States/transition_state.cpp"
    
    "SourceFiles/Utils/utility.hpp"
    "SourceFiles/Utils/utility.inl"
    "SourceFiles/Utils/utility.cpp"
)

target_link_libraries(${EXECUTABLE_NAME}
    TinyXML
    sfml-graphics
    sfml-audio
    sfml-window
    sfml-system
)
set_target_properties(${EXECUTABLE_NAME} PROPERTIES LINKER_LANGUAGE CXX)
